# iroom

./: AnalyserMain.cpp  AnnotateMain.cpp  CMakeLists.txt  Camera.h  CameraMain.cpp  ColorDescriptor.cpp  ColorDescriptor.h  FeatureDescriptor.cpp  FeatureDescriptor.h  Histogram.cpp  Histogram.h  HoGDescriptor.cpp  HoGDescriptor.h  MotionDescriptor.cpp  MotionDescriptor.h  README.md  README.txt  Room.h  Utility.cpp  Utility.h  iRoomMain.cpp  iroom.sln
iroom/: CMakeLists.txt  Camera.cpp  Camera.h  Room.cpp  Room.h  iroom.vcxproj  iroom.vcxproj.filters  main.cpp
